[package]
name = "keri_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.3.3"
anyhow = "1.0.52"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "0.4.14"
kademlia-dht = "1.2.0"
public-ip = "0.2.2"
rand = "0.8.4"
reqwest = "0.11.9"
serde = "1.0.133"
serde_json = "1.0.74"
sha3 = "0.10.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = "1.15.0"
